--- a/ui/src/cm_editor.css
+++ b/ui/src/cm_editor.css
@@ -3,7 +3,7 @@
 }
 
 .cm-editor.cm-focused {
-  /* outline: 2px solid cyan; */
+  outline: 1px solid rgba(0, 0, 0, 0.1) !important;
 }
 
 .state-indicator {
